Increased the font-size and margin-left to allow sufficient size or spacing for the footer links.  And fixed the broken links (i.e. 404 errors) on Page 2.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ a,
 button {
   transition: all 0.3s ease-in-out;
   outline: none !important;
+  font-size: 18px;
+  margin-left: 5px;
 }
 
 a:hover {
@@ -653,7 +655,7 @@ label,
 a {
   font-family: "helvetica";
   font-weight: 500;   
-  /* WTM color: #575757!important; */
+  /*  Used the default color ... WTM color: #575757!important; */
   
 }
 
@@ -784,7 +786,7 @@ h4 {
 }
 
 .tc-white {
-  /* WTM color: #364577!important;  */
+  /* Used the default color ... WTM color: #364577!important;  */
   
 }
 
